test/domains/diten/castAwayStridableDomain.6.good
error: IllegalArgumentError: bad cast from stride -2 to strideKind.negOne
castAwayStridableDomain.chpl:15: error: halt reached - bad cast from stride -2 to strideKind.negOne
